<resources>
    <string name="app_name">MY NEXT CLASS - java CA</string>
    <string name="created">Designed by Eric Strong DT211c</string>
    <string name="time">Time: </string>
    <string name="current">Week: </string>
    <string name="remaining">Remaining mins: </string>
    <string name="click">Click Here</string>
    <string name="classnow">Class Now</string>
    <string name="roomnow">Room Now</string>
    <string name="classnext">Class Next</string>
    <string name="roomnext">Room Next</string>
    <string name="nownext">\t\tNOW\t\t\t\t\t\t\t\t\t\t\tNEXT</string>


    <!--&lt;!&ndash; strings for pop up boxes&ndash;&gt;-->
    <!--<string name="alert_title"><u> NOTE - TITLE</u></string>-->
    <!--<string name="alert_message"><u>This will be the description i put in the message</u></string>-->
    <!--<string name="alert_agree">OK</string>-->


    <!--Strings for the form-->
    <string name="displayTasks">MY NOTES</string>
    <string name="welcomeMessageForm">Please enter a new Task</string>
    <string name="titleBox">Title:</string>
    <string name="descriptionBox">Description:</string>
    <string name="urgencyBox">Urgency:</string>
    <string name="titleHint">module</string>
    <string name="descriptionHint">work to do</string>
    <string name="urgencyHint">1-High , 2-Med , 3-Low</string>
    <string name="formButton">Submit task</string>

    <string name="selectOption">Select Urgency</string>
    <string-array name="SpinnerselectOptions">
        <item>1 High</item>
        <item>2 Medium</item>
        <item>3 Low</item>

    </string-array>

    <!--Strings for popups-->
    <string name="titleLabel"> <b>Title:</b> </string>
    <string name="descriptionLabel"><b>Description:</b></string>
    <string name="priorityLabel"><b>Priority:</b></string>
    <string name="title_activity_about_page">AboutPage</string>


    <!--String for instructions - about page-->
    <string name="aboutApp">
        INSTRUCTIONS FOR POPULATING THE APP\n

\nStep 1.
        \nGo to directory structure DITTimetableApp on your android device after app has been installed

\nStep 2.
\nCreate a text file called timetable.txt or download the template at <b>https://goo.gl/XTVoTp</b>

\n<b>Step 3.</b>
        \nNext read the instructions below on how to format your classes. This is manually entered in the syntax of the following :

\n1,hh,module,class_room,
\nKeep in mind the following
\n1. COMA , all fields must be separated by a coma
\n2. Underscore _ for words such as web development ensure to leave no white space and use the underscore like so web_development
\n3. No full stops or any other punctuation.
\nIt is important to follow these structure rules for <b>mytimetable.txt</b> file or else your timetable will not load. I have also included a template to use so you can just edit the fields to match your timetable.

\nEXAMPLE ENTRY:
\n1,9,free,no_class,
\n1,10,networking,Annex_3022,

<b>\nNOTE:</b>
\nif you do not have a class a specific hour please enter No_Class and also for the room class room specify No_Class</string>

</resources>
